@@ -1,6 +1,15 @@
-# quasiForm #
+# quasiForm
 MODX Revolution Extra for processing forms.
-# Roadmap #
+
+Changelog
+quasiForm 2.2.0 pl
+* Reset emails of recipients after send.
+* Fix small bugs.
+
+quasiForm 2.1.0 pl
+* Code.
+
+# Roadmap
 * Save forms in database
 * Send email to user
 * Page for validation forms
