@@ -7,7 +7,7 @@ $response = [
 ];
 
 // Load the FormSave class
-$formSave = $modx->getService('formsave','FormSave', $modx->getOption('formsave.core_path', null, $modx->getOption('core_path').'components/formsave/').'model/formsave/', []);
+$formSave = $modx->getService('formsave','FormSave', $modx->getOption('formsave.core_path', null, $modx->getOption('core_path').'components/formsave/').'model/formsave/', array());
 
 $formTopic = $modx->getOption('fsFormTopic', $scriptProperties, 'form');
 $formFields = $modx->getOption('fsFormFields', $scriptProperties, false);
@@ -28,15 +28,15 @@ $dataArray = [];
 
 $values = $_POST;
 
-//$values = $hook->getValues();
-foreach($formFields as $field) {
-	if (!isset($values[$field])) {
-		// Add empty field
-		$dataArray[$field] = '';
-		continue;
+if (is_array($formFields)) {
+	foreach($formFields as $field) {
+		if (!isset($values[$field])) {
+			// Add empty field
+			$dataArray[$field] = '';
+			continue;
+		}
+		$dataArray[$field] = $values[$field];
 	}
-	
-	$dataArray[$field] = $values[$field];
 }
 
 
